# Quadcopter-Dynamic-Modeling-in-Python

./: .gitignore  README.md  clean.sh  control.py  log.txt  pyproject.toml  run.py  run2.csv
example/: run_attitude.py
examples/: academic_evaluation_example.py  enhanced_logging_example.py  enhanced_plotting_example.py  lqr_control_example.py  pid_control_example.py  real_time_simulation.py  rl_training_example.py
notebooks/: control_system_design.ipynb  data_analysis.ipynb  performance_comparison.ipynb  rl_training_tutorial.ipynb
other/: get_api.py
other/example/: optimal_altitude.py  optimal_attitude.py  run_altitude.py
quadcopter/: __init__.py  __main__.py  dynamics.py  env.py  plotting.py  simulation.py
quadcopter/controllers/: __init__.py  pid.py
quadcopter_dynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_pid.py
