[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "quadcopter-dynamics"
version         = "0.1.0"
description     = "Quadcopter dynamic modelling, simulation and PID control"
authors         = [{name = "2black0", email = "2black0@gmail.com"}]
license         = {text = "MIT"}
readme          = "README.md"
requires-python = ">=3.9"
dependencies    = [
  "numpy>=1.25",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pytest>=8.2"  
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black"]

[tool.setuptools]
packages = ["quadcopter"]     # explicit is safer than find:
